# grep-hs

./: .gitignore  LICENSE  grep.cabal
app/: Args.hs  Main.hs
